package voldemort;

option java_package = "pt.inesc.undo.proto";
option java_outer_classname = "FromManagerProto";
option optimize_for = SPEED;


//To data node
message ToDataNode{
	optional int64 newSnapshot = 1;
	optional bool resetDependencies = 2;
	optional bool replayOver = 3;
	optional BranchPath branchPath = 4;
	optional EntryAccessesMsg entryAccessesMsg = 5;
	optional bool showStats = 6;
	optional bool showMap = 7;
 
	message EntryAccessesMsg{
		repeated bytes keys = 1;
		required int64 baseRid = 2;
	}
	message BranchPath{
		required int32 branch = 1;
		required int64 latestVersion = 2;
		repeated int64 versions = 3;
	}
}


//To replay node
message ExecList{
	repeated int64 rid = 1;
	required int32 branch = 2;
	required bool start = 3;
	required string replayMode = 4;
	required string targetHost = 5;
	required int32 targetPort = 6;
}


//To proxy
message ProxyMsg{
	optional int32 branch = 1;
	optional bool restrain = 2;
	optional int64 timeTravel = 3;
}
